# health-checks

./: .dockerignore  Cargo.toml  Dockerfile  config.json  docker-compose.yaml
config/: config.json
src/: commands.rs  configs.rs  main.rs
