[package]
name = "health-checks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
parking_lot = "0.12.1"
socket2 = { version = "0.4.7", features = ["all"] }
tracing = "0.1.37"
futures = "0.3.25"
async-process = "1.6.0"
log = "0.4.17"
tracing-subscriber = "0.3.16"
tracing-attributes = "0.1.23"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive", "rc"] }
clap = { version = "4.1.5", features = ["derive"] }
addr = "0.15.6"
telegram-bot-rust = { git = "https://github.com/Burzumm/telegram-bot-rust/", branch = "feature/7" }
reqwest = "0.11.14"
url = "2.3.1"


[[bin]]
name = "health-checks"
path = "src/main.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true